# almalinux_k8s_cluster

./: .gitignore  README.md  ansible.cfg  pyproject.toml  site.yml
.github/workflows/: main.yml
almalinux_k8s_cluster/src/: all_execution.sh  create_invetory.py
ansible/inventory/alma_cluster/: inventory.yml
ansible/inventory/alma_cluster/group_vars/: all.yml
ansible/roles/k8s/cluster/tasks/: main.yml
ansible/roles/k8s/controller/handlers/: main.yml
ansible/roles/k8s/controller/tasks/: extra_controllers.yml  main.yml
ansible/roles/k8s/worker/tasks/: main.yml
ansible/roles/prereq/handlers/: main.yml
ansible/roles/prereq/tasks/: main.yml
ansible/roles/prereq/templates/: kubernetes.repo.tmpl
scripts/: all_execution.sh  ansible_inventory.yml  create_invetory.py
terraform/: README.md
terraform/clusters/proxmox/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/clusters/proxmox/env/homelab/: terraform.tfvars  tofu.tfvars
