[tool.poetry]
name = "alma-k8s"
version = "0.1.0"
description = ""
authors = ["acastro <castrobasurto.angel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.3.0"
ansible-lint = { version = "24.2.0", markers = 'platform_system != "Windows"' }
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
